# PyUnits

./: Build.md  README.md  setup.cfg
.github/workflows/: build.yml
tests/: test_angle_degrees.py  test_angle_gradians.py  test_angle_milliradians.py  test_angle_minute_of_arc.py  test_angle_radians.py  test_angle_seconds_of_arc.py  test_area_acres.py  test_area_hectares.py  test_area_square_feet.py  test_area_square_inches.py  test_area_square_kilometres.py  test_area_square_metres.py  test_area_square_miles.py  test_area_square_yards.py  test_data_storage_bits.py  test_data_storage_gigabits.py  test_data_storage_gigabytes.py  test_data_storage_kibibits.py  test_data_storage_kilobits.py  test_data_storage_kilobytes.py  test_data_storage_mebibits.py  test_data_storage_megabits.py  test_data_storage_megabytes.py  test_data_storage_terabits.py  test_data_storage_terabytes.py  test_data_transfer_rate_bits_per_second.py  test_data_transfer_rate_giga_bits_per_second.py  test_data_transfer_rate_giga_bytes_per_second.py  test_data_transfer_rate_kibibits_per_second.py  test_data_transfer_rate_kilo_bits_per_second.py  test_data_transfer_rate_kilo_bytes_per_second.py  test_data_transfer_rate_mebibits_per_second.py  test_data_transfer_rate_mega_bits_per_second.py  test_data_transfer_rate_mega_bytes_per_second.py  test_data_transfer_rate_tera_bits_per_second.py  test_data_transfer_rate_tera_bytes_per_second.py  test_energy_btu.py  test_energy_calories.py  test_energy_electronvolts.py  test_energy_foot_pounds.py  (+89 more)
units/angle/: degrees.py  gradians.py  milliradians.py  minute_of_arc.py  (+2 more)
(+129 files in other folders)
