[metadata]
name = unit-conversions
version = 0.1.16
author = Mark Timmings
author_email = mark.timmings@putridparrot.com
description = Units conversion package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/putridparrot/PyUnits
project_urls =
    Bug Tracker = https://github.com/putridparrot/PyUnits/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = units
packages = find:
python_requires = >=3.6

[options.packages.find]
where = units
exclude = 
    tests
    .github